k8s/namespaces/llm/vllm/gpt-oss-20b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-gpt-oss-20b
  namespace: llm
  labels:
    app.kubernetes.io/name: gpt-oss-20b
spec:
  ports:
  - name: http-gpt-oss-20b
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: vllm-gpt-oss-20b
  sessionAffinity: None
  type: ClusterIP
